tests/ui/async-await/ice-static-in-async-fn-issue-138225.stderr
error[E0425]: cannot find type `NestedOption` in this scope
  --> $DIR/ice-static-in-async-fn-issue-138225.rs:13:11
   |
LL |     name: NestedOption<Option<String>>,
   |           ^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
